--- a/style.css
+++ b/style.css
@@ -365,6 +365,7 @@ button.small:hover{ transform: translateY(-1px); filter: brightness(1.05); }
   background-color: #4CAF50;
   color: white;
 }
+/* Restart btn*/
 #restartBtn {
   font-size: 14px;
   padding: 8px 16px;
